# obras_cpfl

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/obras_cpfl/: logging_settings.py  main.py  settings.py
src/obras_cpfl/services/: cpfl_client.py  evolution_client.py  textmebot_client.py  tinyurl_client.py
src/obras_cpfl/utils/: formatters.py  parse_workes_response.py  parse_works_response.py  scraper.py  scrapper.py
src/services/: cpfl.py  textmebot.py  tinyurl.py
