[project]
name = "obras-cpfl"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Andrew",email = "miichaaeell.andrew@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "rich (>=14.3.3,<15.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "obras_cpfl", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
